--- a/style.css
+++ b/style.css
@@ -1,57 +1,102 @@
-
 body{
     font-family: 'Roboto', sans-serif;
     margin: 0;
 }
+
 a{
     text-decoration: none;
 }
+
 .flexible-content{
     display: flex;
 }
+
 .header-section{
     background-color: #10e95c;
     padding: 10px 0;
     color: white;
 }
+
 .header-section h4{
-    margin-left: 80px;
+    margin-left: 100px;
     font-size: 28px;
 }
+
 .header-link{
     color: #0D8BF0;
     background-color: white;
     padding: 5px 15px;
     border-radius: 10px;
 }
+
 .header-link:hover{
     color: white;
     background-color: #0D8BF0;
 }
+
 .banner-section{
-    margin-bottom: 50px;
+    margin-bottom: 100px;
 }
+
 .banner-section-left{
     width: 30%;
-    margin-left: 80px
+    margin-left: 100px
 }
+
 .banner-section-left h1{
     font-size: 50px;
     color: #575757;
 }
+
+.banner-section-left p{
+    margin-bottom: 50px;
+}
+
 .banner-section-left a{
     padding: 10px 20px;
     border-radius: 30px;
     background-image: linear-gradient(#44B4FC, #10e95c);
     color: white;
 }
+
 #skip{
     color: #38BEFD;
 }
+
 .banner-section-right{
     width: 50%;
 }
 .banner-section-right img{
     width: 70%;
     margin:30px 0 0 200px;
+}
+
+.about-me-section{
+    background-image: url(img/Frame\ 57.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-bottom: 100px;
+}
+
+.about-me-left{
+    width: 50%;
+}
+
+.about-me-left img{
+    width: 70%;
+}
+
+.about-me-right{
+    width: 30%;
+}
+
+.about-me-right p{
+    margin-bottom: 50px;
+}
+
+.about-me-right a{
+    padding: 10px 20px;
+    border-radius: 30px;
+    background-image: linear-gradient(#44B4FC, #10e95c);
+    color: white;
 }
