--- a/style.css
+++ b/style.css
@@ -35,12 +35,12 @@ a{
 }
 
 .banner-section{
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 }
 
 .banner-section-left{
     width: 30%;
-    margin-left: 100px
+    margin-left: 100px;
 }
 
 .banner-section-left h1{
@@ -75,7 +75,7 @@ a{
     background-image: url(img/Frame\ 57.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 }
 
 .about-me-left{
@@ -99,4 +99,36 @@ a{
     border-radius: 30px;
     background-image: linear-gradient(#44B4FC, #10e95c);
     color: white;
+}
+
+.recipe-section{
+    margin-bottom: 50px;
+}
+
+.recipe-top{
+    width: 60%;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.recipe-top h3{
+    font-size: 26px;
+}
+
+.recipe-top p{
+    margin-bottom: 50px;
+}
+
+.same-recipe-bottom{
+    width: 30%;
+    border-radius: 10px;
+    box-shadow: 3px 3px 8px 5px rgb(98, 93, 93);
+    margin-right: 5%;
+    margin-left: 5%;
+    padding: 10px;
+}
+
+.same-recipe-bottom img{
+    width: 100%;
+    height: 180px;
 }
