--- a/style.css
+++ b/style.css
@@ -90,6 +90,10 @@ a{
     width: 30%;
 }
 
+.about-me-right h2{
+    font-size: 38px;
+}
+
 .about-me-right p{
     margin-bottom: 50px;
 }
@@ -109,10 +113,12 @@ a{
     width: 60%;
     text-align: center;
     margin: 0 auto;
+    text-transform: capitalize;
 }
 
-.recipe-top h3{
-    font-size: 26px;
+.recipe-top h1{
+    font-size: 38px;
+    text-transform: capitalize;
 }
 
 .recipe-top p{
@@ -120,7 +126,7 @@ a{
 }
 
 .same-recipe-bottom{
-    width: 20%;
+    width: 23.3%;
     border-radius: 10px;
     box-shadow: 3px 3px 8px 5px rgb(98, 93, 93);
     margin-right: 5%;
@@ -131,4 +137,41 @@ a{
 .same-recipe-bottom img{
     width: 100%;
     height: 180px;
+}
+
+.team-sectiion h1{
+    text-align: center;
+    font-size: 38px;
+    text-transform: capitalize;
+}
+
+.same-team-content{
+    width: 13%;
+    margin-right: 5%;
+    margin-left: 5%;
+}
+
+.same-team-content h4{
+    color: #44C2FD;
+    font-size: large;
+}
+
+.footer-content{
+    text-align: center;
+    background-color: black;
+    padding: 50px 0;
+}
+
+.footer-content h1{
+    text-transform: uppercase;
+    font-size: 28px;
+    color: #5B5B5B;
+}
+
+.footer-content p{
+    color: #919397;
+}
+
+#food{
+    color: #44C2FD;
 }
