--- a/style.css
+++ b/style.css
@@ -13,11 +13,15 @@ a{
 
 .header-section{
     background-color: #10e95c;
+}
+
+.header-left{
+    width: 50%;
     padding: 10px 0;
     color: white;
 }
 
-.header-section h4{
+.header-left h4{
     margin-left: 100px;
     font-size: 28px;
 }
@@ -32,6 +36,26 @@ a{
 .header-link:hover{
     color: white;
     background-color: #0D8BF0;
+}
+
+.header-right {
+    width: 50%;
+    padding: 40px 0 0 100px;
+}
+
+.header-input{
+    padding: 10px 30px;
+    border: none;
+    border-radius: 10px;
+    font-size: 20px;
+    margin-right: 20px;
+}
+
+.header-btn{
+    padding: 8px 20px;
+    border: none;
+    border-radius: 3px;
+    font-size: 16px;
 }
 
 .banner-section{
@@ -137,6 +161,7 @@ a{
 .same-recipe-bottom img{
     width: 100%;
     height: 180px;
+    border-radius: 10px;
 }
 
 .team-sectiion h1{
