--- a/style.css
+++ b/style.css
@@ -56,6 +56,17 @@ a{
     border: none;
     border-radius: 3px;
     font-size: 16px;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+.social-icon-bar{
+    padding-left: 214px;
+}
+
+.social-icon{
+    display: inline-block;
+    margin: 30px 20px 0;
 }
 
 .banner-section{
@@ -100,6 +111,7 @@ a{
     background-repeat: no-repeat;
     background-size: cover;
     margin-bottom: 50px;
+    padding: 50px 0;
 }
 
 .about-me-left{
@@ -162,6 +174,10 @@ a{
     width: 100%;
     height: 180px;
     border-radius: 10px;
+}
+
+.team-sectiion {
+    margin-bottom: 50px;
 }
 
 .team-sectiion h1{
