--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ a{
 }
 
 .header-section{
-    background-color: #757776;
+    background-color: #10E95C;
 }
 
 .header-left{
@@ -83,6 +83,10 @@ a{
     color: #575757;
 }
 
+#skip{
+    color: #38BEFD;
+}
+
 .banner-section-left p{
     margin-bottom: 50px;
 }
@@ -92,10 +96,6 @@ a{
     border-radius: 30px;
     background-image: linear-gradient(#44B4FC, #10e95c);
     color: white;
-}
-
-#skip{
-    color: #38BEFD;
 }
 
 .banner-section-right{
@@ -218,10 +218,10 @@ a{
     color: #5B5B5B;
 }
 
-.footer-content p{
-    color: #919397;
-}
-
 #food{
     color: #44C2FD;
+}
+
+.footer-content p{
+    color: #919397;
 }
