--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ a{
 }
 
 .about-me-section{
-    background-image: url(img/Frame\ 57.jpg);
+    background-image: url(img/about-bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     margin-bottom: 100px;
