--- a/style.css
+++ b/style.css
@@ -21,9 +21,9 @@ a{
     color: white;
 }
 
-.header-left h4{
+.header-left h5{
     margin-left: 100px;
-    font-size: 28px;
+    font-size: 24px;
 }
 
 .header-link{
@@ -38,13 +38,17 @@ a{
     background-color: #0D8BF0;
 }
 
-.header-right {
+.header-right{
     width: 50%;
-    padding: 40px 0 0 100px;
+    padding: 42px 0 0 100px;
+}
+
+.input-section{
+    padding-left: 30px;
 }
 
 .header-input{
-    padding: 10px 30px;
+    padding: 6px 15px;
     border: none;
     border-radius: 10px;
     font-size: 20px;
@@ -58,6 +62,7 @@ a{
     font-size: 16px;
     font-weight: 700;
     cursor: pointer;
+    background-color: white;
 }
 
 .social-icon-bar{
@@ -79,7 +84,7 @@ a{
 }
 
 .banner-section-left h1{
-    font-size: 50px;
+    font-size: 48px;
     color: #575757;
 }
 
@@ -149,11 +154,10 @@ a{
     width: 60%;
     text-align: center;
     margin: 0 auto;
-    text-transform: capitalize;
 }
 
 .recipe-top h1{
-    font-size: 38px;
+    font-size: 42px;
     text-transform: capitalize;
 }
 
@@ -186,7 +190,7 @@ a{
 
 .team-sectiion h1{
     text-align: center;
-    font-size: 38px;
+    font-size: 42px;
     text-transform: capitalize;
 }
 
@@ -201,9 +205,8 @@ a{
     width: 100%;
 }
 
-.same-team-content h4{
+.same-team-content h3{
     color: #44C2FD;
-    font-size: large;
 }
 
 .footer-content{
@@ -214,7 +217,7 @@ a{
 
 .footer-content h1{
     text-transform: uppercase;
-    font-size: 28px;
+    font-size: 42px;
     color: #5B5B5B;
 }
 
