--- a/style.css
+++ b/style.css
@@ -20,10 +20,10 @@ a{
     width: 50%;
     padding: 10px 0;
     color: white;
+    padding-left: 200px;
 }
 
 .header-left h5{
-    margin-left: 100px;
     font-size: 24px;
 }
 
@@ -77,7 +77,7 @@ a{
 
 .banner-section-left{
     width: 30%;
-    margin-left: 100px;
+    padding-left: 200px;
 }
 
 .banner-section-left h1{
@@ -117,6 +117,7 @@ a{
 }
 
 .about-me-left{
+    padding-left: 200px;
     width: 50%;
 }
 
