--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ a{
     width: 50%;
     padding: 10px 0;
     color: white;
-    padding-left: 200px;
+    padding-left: 150px;
 }
 
 .header-left h5{
@@ -77,7 +77,7 @@ a{
 
 .banner-section-left{
     width: 30%;
-    padding-left: 200px;
+    padding-left: 150px;
 }
 
 .banner-section-left h1{
@@ -117,7 +117,7 @@ a{
 }
 
 .about-me-left{
-    padding-left: 200px;
+    padding-left: 150px;
     width: 50%;
 }
 
@@ -164,14 +164,14 @@ a{
 }
 
 .recipe-bottom{
-    padding-left: 200px;
+    padding-left: 150px;
 }
 
 .same-recipe-bottom{
     width: 23.3%;
     border-radius: 10px;
     box-shadow: 3px 3px 8px 5px rgb(98, 93, 93);
-    margin-right: 5%;
+    margin-right: 8%;
     padding: 10px;
 }
 
@@ -191,20 +191,20 @@ a{
 }
 
 .more-recipes-content{
-    padding-left: 200px;
+    padding-left: 150px;
 }
 
 .column-1,.column-2,.column-3{
     width: 23.3%;
-    margin-right: 7%;
+    margin-right: 10%;
     box-shadow: 2px 2px 2px 2px #000;
     border-left: 5px solid;
     border-image: linear-gradient(#44B4FC, #10e95c);
     border-image-slice: 1;
 }
 
-.column-2{
-    margin-right: 8%;
+.column-3{
+    margin-right: 0;
 }
 
 .column-1 h6,.column-2 h6,.column-3 h6{
@@ -216,20 +216,24 @@ a{
     list-style-type: none;
 }
 
-.team-sectiion {
-    padding: 100px 0 100px 70px;
+.team-section {
     background-color: #EBF8FF;
+    padding: 100px 0;
 }
 
-.team-sectiion h1{
+.team-section h1{
     text-align: center;
     font-size: 42px;
     text-transform: capitalize;
 }
 
+.team-content{
+    padding-left: 150px;
+}
+
 .same-team-content{
     border: 1px solid #44C2FD;
-    width: 20%;
+    width: 18%;
     margin-right: 5%;
     padding: 5px;
 }
