--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ a{
 .column-1,.column-2,.column-3{
     width: 23.3%;
     margin-right: 10%;
-    box-shadow: 2px 2px 2px 2px #000;
+    box-shadow: 2px 2px 8px 2px #000;
     border-left: 5px solid;
     border-image: linear-gradient(#44B4FC, #10e95c);
     border-image-slice: 1;
@@ -232,7 +232,8 @@ a{
 }
 
 .same-team-content{
-    border: 1px solid #44C2FD;
+    box-shadow: 3px 3px 10px 3px black;
+    border-radius: 5px;
     width: 18%;
     margin-right: 5%;
     padding: 5px;
