--- a/style.css
+++ b/style.css
@@ -60,7 +60,11 @@ a{
     font-weight: 700;
     cursor: pointer;
     background-color: white;
-    margin-top: 12px;
+    margin: 12px 30px 0 0;
+}
+
+.header-btn:last-child{
+    margin: 0;
 }
 
 .banner-section{
